<?xml version="1.0"?>
<package format="2">
  <name>schunk_description</name>
  <version>0.0.1</version>
  <description>The schunk_pg70_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="pradheep@neobotix.de">pradheep krishna muthukrishnan padmanabhan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
